cmake_minimum_required(VERSION 3.16)

# if you want to add sub directory.
# add_subdirectory(sample_name)


# if you want to add test and test executable.
# add_executable(sample-test-name source)
# target_link_libraries(sample-test-name test_target_library)

# if you want to add config for test.
# add_test(
#    NAME test-name
#    COMMAND $<TARGET_FILE:sample-test-name> commad_line_option
#    )
#    set_property(
#        TEST test-name
#        PROPERTY LABELS label_name1 label_name2 ...
#        )